Adapt all tests to the new sensi API, mainly using the sensitivity analysis API that takes a list of factors and return a Result object and not the reader writer for simplicity reasons.
Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>